removed some features that were a little bit buggy and added a method to collapse and expand the control panel

--- a/styles.css
+++ b/styles.css
@@ -17,14 +17,26 @@
     margin: 10px;
 }
 
-.control-panel {
+#control-panel {
     position: absolute;
-    top: 0;
-    bottom: 0;
+    padding: 5px 7px;
+    height: fit-content;
+    width: fit-content;
+    border: 4px solid cyan;
+    border-radius: 10px;
+    margin: 10px;
+    left: 10px;
+    bottom: 10px;
     color: white;
     z-index: 1;
 }
 
 input.number{
     width: 5em;
+}
+
+h2 {
+    text-align: center;
+    margin: 0;
+    padding: 0;
 }
